2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to the feed.  "What's new" section and "how
	to use the modules" section added.  |Whatpm::XML::Parser| added to
	the list of modules.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* mkcommitfeed.pl: Typo fixed.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* cvscommit.sh: Set |--feed-title|, |--feed-related-url|,
	|--feed-license-url|, and |-feed-rights| options to the
	|mkcommitfeed.pl| call.

	* mkcommitfeed.pl: New options |--feed-license-url|,
	|--feed-related-url|, and |--feed-rights| implemented.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* .htaccess: Directives for Atom feeds are added.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* cvscommit.sh: Add |-I| option to the |perl| command.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* cvscommit.sh: Add a line to invoke |mkcommitfeed.pl|.

	* mkcommitfeed.pl: New script.

2008-10-05  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Missing link to Whatpm::RDFXML module is added.
	Typo fixed.  Noted that Media Query Level 3 is not supported yet.
	Linked to WebHACC supported standards documentation.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Add link to the CSS extension document.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Add missing links to more existing modules.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Document structure reconsidered.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Missing links to existing modules are added.
	More links to demos and application are added.  Link to the tarball
	of the CVS trunk is added.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to handles.en.html.

2008-07-19  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to Whatpm::WebIDL module.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to user data names documentation
	is added.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>
