@@ -53,7 +53,7 @@ unless (defined $entry_content) {
 }
 
 if ($entry_content =~ /^(\d+)-(\d+)-(\d+)\s+(.+)<([^<>]+)>/m) {
-  $entry_date //= timegm (0, 0, 0, $3, $2-1, $1);
+#  $entry_date //= timegm (0, 0, 0, $3, $2-1, $1);
   $entry_author_name //= $4;
   $entry_author_mail //= $5;
   $entry_author_name =~ s/\s+$//;
@@ -93,6 +93,7 @@ unless ($feed) {
   $feed = $doc->create_element_ns ('http://www.w3.org/2005/Atom', 'feed');
   $doc->append_child ($feed);
 }
+$feed->set_attribute_ns ('xmlns', $feed->namespace_uri);
 
 unless (@{$feed->author_elements}) {
   if (defined $feed_author_name) {
@@ -151,4 +152,4 @@ $content->text_content ($entry_content);
   print $file $doc->inner_html;
 }
 
-## $Date: 2008/10/21 05:18:22 $
+## $Date: 2008/10/21 06:17:52 $
