@@ -1,0 +1,13 @@
+<Atom:feed xml:lang="en" xmlns:Atom="http://www.w3.org/2005/Atom"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit</Atom:id><Atom:title>Whatpm ChangeLog diffs</Atom:title><Atom:updated>2008-10-21T05:18:23Z</Atom:updated><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit" hreflang="en" rel="self" type="application/atom+xml"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme" rel="related"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme#license" rel="license"></Atom:link><Atom:rights>This feed is free software; you can redistribute it and/or modify it under the same terms as Perl itself.</Atom:rights><Atom:entry xml:id="entry-1224566303"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1224566303</Atom:id><Atom:title>2008-10-21 Wakaba</Atom:title><Atom:updated>2008-10-21T00:00:00Z</Atom:updated><Atom:author><Atom:name>Wakaba</Atom:name><Atom:email>wakaba@suika.fam.cx</Atom:email></Atom:author><Atom:content type="text">++ ChangeLog	21 Oct 2008 05:18:19 -0000
+	* mkcommitfeed.pl: Typo fixed.
+
+2008-10-21  Wakaba  &lt;wakaba@suika.fam.cx&gt;
+
+</Atom:content></Atom:entry><Atom:entry xml:id="entry-1224569412"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1224569412</Atom:id><Atom:title>2008-10-21 Wakaba</Atom:title><Atom:updated>2008-10-21T00:00:00Z</Atom:updated><Atom:author><Atom:name>Wakaba</Atom:name><Atom:email>wakaba@suika.fam.cx</Atom:email></Atom:author><Atom:content type="text">++ ChangeLog	21 Oct 2008 06:09:47 -0000
+	* readme.en.html: Link to the feed.  &quot;What's new&quot; section and &quot;how
+	to use the modules&quot; section added.  |Whatpm::XML::Parser| added to
+	the list of modules.
+
+2008-10-21  Wakaba  &lt;wakaba@suika.fam.cx&gt;
+
+</Atom:content></Atom:entry></Atom:feed>
