@@ -1,5 +1,10 @@
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* mkcommitfeed.pl: Don't use date from the ChangeLog content as
+	<updated> date.  Set |xmlns| attribute of the root |feed| element.
+
+2008-10-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* readme.en.html: Link to the feed.  "What's new" section and "how
 	to use the modules" section added.  |Whatpm::XML::Parser| added to
 	the list of modules.
